k8s/media/transmission/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: media-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: transmission.media.k8s.prrlvr.fr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: transmission
              port:
                name: transmission
  tls:
    - hosts:
        - transmission.media.k8s.prrlvr.fr
      secretName: transmission-media-tls
